# blogPost

./: .env  Cargo.toml  log_post.sqlite
migrations/2019-09-30-063006_create_users_and_posts/: up.sql
src/: errors.rs  lib.rs  main.rs  models.rs  schema.rs
src/models/: mod.rs  post.rs  user.rs
static/css/: main.css
templates/: base.html.tera  post_summary.html.tera  publish.html.tera  write.html.tera
