[package]
name = "my_blog"
version = "0.1.0"
authors = ["Cherry"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
tera = "*"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.40"

# DB
diesel = { version = "1.4.2", features = ["sqlite", "chrono"] }

# r2d2 is related to database connection pools
r2d2 = "*"
r2d2-diesel = "*"

# SYS
dotenv = "0.15.0"

# jwt authenrication
jsonwebtoken = "1"
rustc-serialize = "0.3"
bcrypt = "0.4.0"
chrono = { version = "0.4.6", features = ["serde"] }
# csrf-token = { git = "ssh://git@github.com/3dom-co-jp/csrf-token.git", branch="v0.2.x" }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates", "tera_templates", "serve", "diesel_sqlite_pool"]